# melodi

./: Cargo.toml  README.md
harmoni/: Cargo.toml
harmoni/src/: main.rs
piano/: Cargo.toml
piano/src/: main.rs
src/: app.rs  collections.rs  core.rs  entry.rs  events.rs  game.rs  lib.rs
src/collections/: vect.rs
src/core/: app.rs  event.rs  input.rs  log.rs  mem.rs
src/core/log/: asserts.rs  noasserts.rs
src/platform/: linux.rs  windows.rs
strings-entry/: Cargo.toml
strings-entry/src/: lib.rs
