[package]
name = "melodi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accesskit = "0.19.0"
accesskit_winit = "0.27.0"
tracing = "0.1.41"
wgpu = "25.0.0"
winit = "0.30.11"

[workspace]
members = [ "harmoni" ]
