[package]
name = "melodi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accesskit = "0.21.0"
accesskit_winit = "0.29.0"
tracing = "0.1.41"
wgpu = "26.0.1"
winit = "0.30.12"

[workspace]
members = [ "harmoni" ]
